--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ BrushComponent=
 Enemy_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 NavMeshBoundsVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 SceneComponent=
-Door_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+Door_C=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorExperimentalSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorSettings=
@@ -289,6 +289,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,In
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
+PropertyWrapper=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
@@ -345,8 +346,6 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/StarterContent/Blueprints/Door.Door
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1174,27 +1173,37 @@ K2Node_Composite.GraphNodeDetail=True
 K2Node_Composite.Graph=True
 K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
+StaticMeshComponent.MaterialParameters=False
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/StarterContent/Blueprints/Door
-MRUItem2=/Game/StarterContent/Props/Materials/M_Door
-MRUItem3=/Game/MaterialInstances/FloorLvl
-MRUItem4=/Game/Materials/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
-MRUItem5=/Game/Materials/T_CobbleStone_Rough_Mat
-MRUItem6=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327
-MRUItem7=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
-MRUItem8=/Game/StarterContent/Architecture/Floor
-MRUItem9=/Game/ThirdPersonBP/Enemy
-MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem12=/Game/ThirdPersonBP/ThirdPersonCharacter
-MRUItem13=/Game/ThirdPersonBP/EnemyMaterial
-MRUItem14=/Game/ThirdPersonBP/PlayerMaterial
-MRUItem15=/Game/ThirdPersonBP/NewMaterialInstanceConstant
-MRUItem16=/Game/ThirdPersonBP/NewPhysicalMaterial
-MRUItem17=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem18=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem0=/Game/StarterContent/Props/SM_Door
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/StarterContent/Blueprints/Door
+MRUItem3=/Game/StarterContent/Props/Materials/M_Door
+MRUItem4=/Game/MaterialInstances/FloorLvl
+MRUItem5=/Game/Materials/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
+MRUItem6=/Game/Materials/T_CobbleStone_Rough_Mat
+MRUItem7=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327
+MRUItem8=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
+MRUItem9=/Game/StarterContent/Architecture/Floor
+MRUItem10=/Game/ThirdPersonBP/Enemy
+MRUItem11=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem13=/Game/ThirdPersonBP/ThirdPersonCharacter
+MRUItem14=/Game/ThirdPersonBP/EnemyMaterial
+MRUItem15=/Game/ThirdPersonBP/PlayerMaterial
+MRUItem16=/Game/ThirdPersonBP/NewMaterialInstanceConstant
+MRUItem17=/Game/ThirdPersonBP/NewPhysicalMaterial
+MRUItem18=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem19=/Game/Mannequin/Character/Mesh/SK_Mannequin
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1219,6 +1228,13 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[22]\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=1
@@ -1237,6 +1253,7 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[22]\" "
 /Game/MaterialInstances/FloorLvl.FloorLvl=1
 /Game/StarterContent/Props/Materials/M_Door.M_Door=1
 /Game/StarterContent/Blueprints/Door.Door=1
+/Game/StarterContent/Props/SM_Door.SM_Door=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
