--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,11 +176,11 @@ TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
 
 [DetailCustomWidgetExpansion]
-ThirdPersonCharacter_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
-CapsuleComponent=
+ThirdPersonCharacter_C=
+CapsuleComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 MaterialInstanceConstant=
-Character=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+Character=
 PlayerStart=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BrushComponent=
 Enemy_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
@@ -225,7 +225,7 @@ CrashReporterSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 DataValidationSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
-K2Node_VariableGet=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+K2Node_VariableGet=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
@@ -300,16 +300,16 @@ BlockingVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharac
 Brush=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 NewFunction_0=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 NewFunction_1=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
-K2Node_VariableSet=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+K2Node_VariableSet=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 Actor=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 TestFind_C=
 Door Rotating_2=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 Door Rotating=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
-StaticMeshComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+StaticMeshComponent=
 AnotherDoor_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-BillboardComponent=
+BillboardComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PostProcessVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
@@ -322,7 +322,7 @@ GetText_0=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C
 HUD_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -416,8 +416,10 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Door.Door
 OpenAssetsAtExit=/Game/Blueprints/HUD.HUD
+OpenAssetsAtExit=/Game/Blueprints/Door.Door
+OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1476,20 +1478,36 @@ HUD_C.Default=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+LevelScriptBlueprint.ClassOptions=True
+LevelScriptBlueprint.BlueprintOptions=True
+LevelScriptBlueprint.Interfaces=True
+LevelScriptBlueprint.Packaging=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Cooking=True
+ParticleEventManager.Rendering=True
+ParticleEventManager.Replication=True
+ParticleEventManager.Collision=True
+ParticleEventManager.Input=True
+ParticleEventManager.Actor=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem1=/Game/Blueprints/Door
 MRUItem2=/Game/Blueprints/HUD
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/StarterContent/Maps/Minimal_Default
-MRUItem7=/Game/ThirdPersonBP/ThirdPersonOverview
-MRUItem8=/Game/Blueprints/EnterDoor
-MRUItem9=/Game/Blueprints/EnterDoorModel
-MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem11=/Game/Blueprints/Door
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem5=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem6=/Game/StarterContent/Maps/StarterMap
+MRUItem7=/Game/StarterContent/Maps/Minimal_Default
+MRUItem8=/Game/ThirdPersonBP/ThirdPersonOverview
+MRUItem9=/Game/Blueprints/EnterDoor
+MRUItem10=/Game/Blueprints/EnterDoorModel
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem12=/Game/Blueprints/SM_Door_2
 MRUItem13=/Game/Blueprints/Door_2
 MRUItem14=/Game/Blueprints/SM_Door
@@ -1503,9 +1521,9 @@ MRUItem19=/Game/StarterContent/Blueprints/Door
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-ThirdPersonCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" "
 Enemy_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1570,6 +1588,7 @@ Visual=
 /Game/Blueprints/EnterDoorModel.EnterDoorModel=1
 /Game/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
 /Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap=1
+/Game/Blueprints/HUD.HUD=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1715,7 +1734,7 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=EditorErrors
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.StaticMesh=False
@@ -1726,9 +1745,9 @@ BoxComponent.Physics=False
 Brush.BrushSettings=True
 
 [RootWindow]
-ScreenPosition=X=58.000 Y=168.000
-WindowSize=X=1280.000 Y=718.000
-InitiallyMaximized=True
+ScreenPosition=X=18.000 Y=35.000
+WindowSize=X=1280.000 Y=671.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2672,6 +2691,9 @@ InputSettings=True
 ChangeVariableType_Warning=True
 DeleteVariableInUse_Warning=True
 SuppressOpenURLWarning=False
+
+[FEditorModeTools]
+CoordSystem=1
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
