Timed open door

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,7 +112,7 @@ PreserveNonUniformScale=False
 bUseLegacyPostEditBehavior=False
 PreviewMeshes=/Engine/EditorMeshes/ColorCalibrator/SM_ColorCalibrator.SM_ColorCalibrator
 BillboardScale=1.000000
-TransformWidgetSizeAdjustment=-3
+TransformWidgetSizeAdjustment=-4
 bSaveEngineStats=False
 MeasuringToolUnits=MeasureUnits_Centimeters
 SelectedSplinePointSizeAdjustment=0.000000
@@ -183,10 +183,10 @@ MaterialInstanceConstant=
 Character=
 PlayerStart=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BrushComponent=
-Enemy_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+Enemy_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 NavMeshBoundsVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-SceneComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
-Door_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+SceneComponent=
+Door_C=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorExperimentalSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorSettings=
@@ -295,7 +295,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,In
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
-PropertyWrapper=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+PropertyWrapper=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 BlockingVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 Brush=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 NewFunction_0=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
@@ -315,11 +315,11 @@ PostProcessVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCha
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 LightmassImportanceVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 PrimitiveComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-EnterDoor_C=
+EnterDoor_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 ThirdPersonExampleMap_C=
 GetText_4=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 GetText_0=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-HUD_C=
+HUD_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
@@ -420,6 +420,7 @@ OpenAssetsAtExit=/Game/Blueprints/HUD.HUD
 OpenAssetsAtExit=/Game/Blueprints/Door.Door
 OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/Enemy.Enemy
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1496,26 +1497,26 @@ ParticleEventManager.Input=True
 ParticleEventManager.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Blueprints/Door
-MRUItem2=/Game/Blueprints/HUD
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem5=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem6=/Game/StarterContent/Maps/StarterMap
-MRUItem7=/Game/StarterContent/Maps/Minimal_Default
-MRUItem8=/Game/ThirdPersonBP/ThirdPersonOverview
-MRUItem9=/Game/Blueprints/EnterDoor
-MRUItem10=/Game/Blueprints/EnterDoorModel
-MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem12=/Game/Blueprints/SM_Door_2
-MRUItem13=/Game/Blueprints/Door_2
-MRUItem14=/Game/Blueprints/SM_Door
-MRUItem15=/Game/StarterContent/Props/SM_Door
-MRUItem16=/Game/MaterialInstances/FloorLvl
-MRUItem17=/Game/Materials/T_CobbleStone_Pebble_Mat
-MRUItem18=/Game/Blueprints/AnotherDoor
-MRUItem19=/Game/StarterContent/Blueprints/Door
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/Blueprints/Enemy
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/Blueprints/Door
+MRUItem4=/Game/Blueprints/HUD
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem6=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem7=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem8=/Game/StarterContent/Maps/StarterMap
+MRUItem9=/Game/StarterContent/Maps/Minimal_Default
+MRUItem10=/Game/ThirdPersonBP/ThirdPersonOverview
+MRUItem11=/Game/Blueprints/EnterDoor
+MRUItem12=/Game/Blueprints/EnterDoorModel
+MRUItem13=/Game/Blueprints/SM_Door_2
+MRUItem14=/Game/Blueprints/Door_2
+MRUItem15=/Game/Blueprints/SM_Door
+MRUItem16=/Game/StarterContent/Props/SM_Door
+MRUItem17=/Game/MaterialInstances/FloorLvl
+MRUItem18=/Game/Materials/T_CobbleStone_Pebble_Mat
+MRUItem19=/Game/Blueprints/AnotherDoor
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1525,7 +1526,7 @@ ThirdPersonCharacter_C=
 Character=
 Pawn=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" "
-Enemy_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Enemy_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1734,7 +1735,7 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=BlueprintLog
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.StaticMesh=False
