--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,8 +176,8 @@ TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
 
 [DetailCustomWidgetExpansion]
-ThirdPersonCharacter_C=
-CapsuleComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+ThirdPersonCharacter_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
+CapsuleComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 MaterialInstanceConstant=
 Character=
@@ -306,7 +306,7 @@ Actor=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Ren
 TestFind_C=
 Door Rotating_2=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 Door Rotating=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
-StaticMeshComponent=
+StaticMeshComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 AnotherDoor_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 BillboardComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
@@ -319,7 +319,7 @@ EnterDoor_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter
 ThirdPersonExampleMap_C=
 GetText_4=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 GetText_0=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-HUD_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,
+HUD_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
@@ -1521,7 +1521,7 @@ MRUItem19=/Game/Blueprints/AnotherDoor
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Comment.CommentColor\" "
 ThirdPersonCharacter_C=
 Character=
 Pawn=
