--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/UE4_Labirynth")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/UE4_Labirynth")
 
+[/Script/NavigationSystem.RecastNavMesh]
+DrawOffset=10.000000
+AgentRadius=18.784922
+bDrawPolyEdges=False
+
