--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,4 +28,24 @@ AppliedDefaultGraphicsPerformance=Maximum
 DrawOffset=10.000000
 AgentRadius=18.784922
 bDrawPolyEdges=False
+bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
+
+[/Script/NavigationSystem.NavigationSystemV1]
+DefaultAgentName=None
+CrowdManagerClass=/Script/AIModule.CrowdManager
+bAutoCreateNavigationData=True
+bSpawnNavDataInNavBoundsLevel=True
+bAllowClientSideNavigation=False
+bShouldDiscardSubLevelNavData=True
+bTickWhilePaused=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
+DataGatheringMode=Instant
+DirtyAreaWarningSizeThreshold=-1.000000
++SupportedAgents=(Name="Default",Color=(B=246,G=223,R=255,A=164),DefaultQueryExtent=(X=13.066118,Y=35.886528,Z=93.731003),NavDataClass=/Script/NavigationSystem.RecastNavMesh,AgentRadius=10.000000,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=True,bCanJump=True,bCanWalk=True,bCanSwim=True,bCanFly=True)
+SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=True,bSupportsAgent3=True,bSupportsAgent4=True,bSupportsAgent5=True,bSupportsAgent6=True,bSupportsAgent7=True,bSupportsAgent8=True,bSupportsAgent9=True,bSupportsAgent10=True,bSupportsAgent11=True,bSupportsAgent12=True,bSupportsAgent13=True,bSupportsAgent14=True,bSupportsAgent15=True)
+DirtyAreasUpdateFreq=60.000000
 
