--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B1E39A5D4A3D17FB2677EC8860717B6E
 ProjectName=Third Person BP Game Template
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "79ED28584DDE992413FF2E8285C226A3", "Labirynth")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
